# surplus

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
adapters/: codex-notes.md
adapters/launchd/: README.md  com.jonathanwizman.surplus.plist.template  com.surplus.tick.plist.template
adapters/openclaw/: README.md  cron-example.md
board/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
board/src/: App.tsx  api.ts  index.css  lib.ts  types.ts  useNow.ts
board/src/components/: AddProjectModal.tsx  Board.tsx  BorderBeam.tsx  Drawer.tsx  Header.tsx  InfoTip.tsx  ProjectDrawer.tsx  SettingsPanel.tsx  SlideOver.tsx  TaskCard.tsx
desktop/: package.json  pnpm-lock.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html
src/: cli.ts  config.ts  credentials.ts  db.ts  decide.ts  discover.ts  dispatcher.ts  install.ts  judge.ts  models.ts  roles.ts  runner.ts  server.ts  types.ts  usage.ts  vision.ts
src/providers/: claude.ts  codex.ts
templates/: VISION.md
test/: codex.test.ts  config.test.ts  db.test.ts  decide.test.ts  discover.test.ts  install.test.ts  judge.test.ts  models.test.ts  roles.test.ts  runner.test.ts  server.test.ts  usage.test.ts  vision.test.ts
