[package]
name = "surplus-desktop"
version = "0.1.0"
description = "macOS menu-bar shell for surplus"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
